Modified structure to make it mobile ready. Made copy corrections. Added Dismas pages.

--- a/board.html
+++ b/board.html
@@ -17,16 +17,14 @@
     <nav class="navbar navbar-default navbar-custom">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header text-center">
+          <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home.html">
-            <img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo">
-          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,18 +54,19 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Saint Dismas<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="dismas.html">Dismas the Patron Saint of Prison Inmates</a></li>
                 <li><a href="prayer.html">Prayer to St.Dismas</a></li>
-
-
-
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
           </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
   </div>
 
@@ -86,26 +85,16 @@
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">Board of Directors</h1>
-        <p class="cursive">
-          And because we, the church, are now His representatives on earth, prison is where we should be as well — calling the sick to the healing touch of  Jesus the Savior.    Still recognizing in those inmates, the dignity of God’s creation, no matter how far they have fallen; trusting that no one — NO ONE —is beyond Christ’s power to love , forgive and redeem.
-        </p>
+        <h1 class="text-center ftg">SAINT DISMAS PRISON MINISTRY FOUNDATION</h1>
         <h2 class="text-center ftg">
-          SAINT DISMAS PRISON MINISTRY FOUNDATION INC<br>
-          2014-2015
-        </h2>
+          Board of Directors
+        </h2><br>
         <h4 class="text-center ftg">
-          <p>
-            REV. DEACON DONALD BATTISTON
-          </p>
-          <p>
-            WILLIAM CONNELL
-          </p>
           <p>
             MARY E. LUPO
           </p>
           <p>
-            REV. DEACON GEORGE KINARD
+            WILLIAM CONNELL
           </p>
           <p>
             PHILIP JEKANOWSKI
@@ -114,9 +103,18 @@
             WILLIAM C. MATTISON
           </p>
           <p>
-            NO DIRECTORS RECEIVE ANY FORM OF COMPENSATION
+            REV. DEACON GEORGE KINARD
+          </p>
+          <p>
+            REV. DEACON DONALD BATTISTON
           </p>
         </h4>
+        <p class="cursive">
+          And because we, the church, are now His representatives on earth, prison is where we should be as well — calling the sick to the healing touch of  Jesus the Savior.    Still recognizing in those inmates, the dignity of God’s creation, no matter how far they have fallen; trusting that no one — NO ONE —is beyond Christ’s power to love , forgive and redeem.
+        </p>
+        <p class="cursive small">
+          *NO DIRECTORS RECEIVE ANY FORM OF COMPENSATION
+        </p>
         <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
       </div>
     </div>
