--- a/dismas.html
+++ b/dismas.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
+
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-  <title>Saint Dismas - Sports Equipment</title>
+  <title>Saint Dismas - Saint Dismas</title>
 </head>
 
 <body>
@@ -70,30 +71,41 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
+
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-4 col-md-3">
         <aside class="text-center">
           <p>
-            “I was in prison and you came to visit me...
-            <br>I tell you the truth, whatever you did
-            <br>for one of the least of these brothers
-            <br>of mine, you did for me.”
-            <br>&mdash;Matthew 25:36, 40
-            <br>
+            “For God so loved the world,
+            <br>that he gave his only Son,
+            <br>that whoever believes in him
+            <br> should not perish but have eternal life.
+            <br>&mdash;John 3:16
           </p>
-          <img src="images/jesus_bars_thorns.gif" alt="Photo of a person dressed as Jesus, wearing a cron of thorns, behind bars." />
+          <img src="images/dismas-side.jpg" alt="Artwork of Jesus on the cross, and Dismas next to him. Jesus has a spear in his side, and more spearheads threaten." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">Sports Equipment Program</h1>
-        <p class="bring-down">
-          Recreation Yard equipment is not supplied by the Department of Corrections. Saint Dismas purchases footballs, soccer balls, basketballs, nets, rims, orange cones, colored pinneys, time clocks, stop watches, etc., and has them shipped from the supplier directly to the prison warehouse in care of the Prison Chaplain.
+        <h1 class="text-center ftg">Dismas the Patron Saint of Prison Inmates</h1>
+        <p>
+          Luke’s gospel contains unique details of an event on Golgotha. Two unnamed persons are mentioned at the Crucifiction. The Gospel of Nichodemus later names them Dismas and Gestas.
         </p>
-          <img src="images/sports.jpg" class="main-column-img center-block responsive" alt="Inmates jogging along a razor wire fence.">
+        <p class="cursive">
+          “Two others also, who were criminals, were led away to be put to death with [Jesus]. . . . One of the criminals who were hanged railed at him, saying, ‘Are you not the Christ? Save yourself and us!’ But the other rebuked him, saying, ‘Do you not fear God, since you are under the same sentence of condemnation? And we indeed justly; for we are receiving the due reward of our deeds; but this man has done nothing wrong.’ And he said, ‘Jesus, remember me when you come into your kingdom.’ And he said to him, ‘Truly, I say to you, today you will be with me in paradise’” (Luke 23:32-43).
+        </p>
+        <img src="images/dismas-cross.jpg" class="main-column-img center-block responsive" alt="Artwork of a close up of two hands on separate crosses, Dismas's on the left, Jesus's, with a nail driven through the palm and blood streaming out of the wound, on the right. Their fingers reach for each other.">
+        <p>
+          This is all the Bible tells us about the “penitent thief,” but several points are clear. First, he is a criminal whose crucifixion for his actions is just. Second, he is contrite. Third, he believes in Jesus. And finally, Jesus’ unlimited mercy is clearly shown as he affirms his salvation. There is no indication that this man was a Christian, yet Jesus assures him that he is saved and even promises (in most Bible translations) that he will go to heaven that very day.
+        </p>
+        <p>
+          Although not formally canonized by the Catholic Church, it is believed that he was canonized by Christ himself at that moment. He is venerated as "St. Dismas" .  In the Roman Catholic tradition, His feast is celebrated on March 25.
+        </p>
       </div>
     </div>
   </div>
+
+
   <footer class="">
     <div class="container">
       <div class="row">
