--- a/donations.html
+++ b/donations.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-  <title>Saint Dismas - Veteran Posts</title>
+  <title>Saint Dismas - How to Help</title>
 </head>
 
 <body>
@@ -19,16 +19,14 @@
     <nav class="navbar navbar-default navbar-custom">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header text-center">
+          <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home.html">
-            <img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo">
-          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,18 +56,19 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Saint Dismas<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="dismas.html">Dismas the Patron Saint of Prison Inmates</a></li>
                 <li><a href="prayer.html">Prayer to St.Dismas</a></li>
-
-
-
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
           </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
   </div>
 
@@ -93,13 +92,16 @@
           The only hope for an inmate to change his life is to "catch a glimpse" of the loving and forgiving Christ in those who minister to them. Your prayers and donations help us to do that better.
         </p>
         <p>
-          If you have questions or would like to assist us in this Corporal work of mercy, we invite you to contact us or contribute (tax deductible) to:
+          If you have questions or would like to assist us in this Corporal work of mercy, we invite you to contact us or contribute a <span class="cursive">tax deductible*</span> donation to:
           <div class="text-center ftg larger">
             Saint Dismas Prison Ministry Foundation<br>
             1701 Indian Creek Parkway<br>
             Jupiter, Florida 33458<br>
             561-662-0832
           </div>
+        </p>
+        <p class="cursive small">
+          *The Saint Dismas Prison Ministry Foundation is an IRS approved 501C(3) tax exempt charity.
         </p>
         <img src="images/three-crosses.jpg" class="main-column-img center-block responsive" alt="Image of one man helping another top a mountain.">
       </div>
