--- a/merit-dorm.html
+++ b/merit-dorm.html
@@ -18,16 +18,14 @@
     <nav class="navbar navbar-default navbar-custom">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header text-center">
+          <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home.html">
-            <img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo">
-          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,21 +55,21 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Saint Dismas<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="dismas.html">Dismas the Patron Saint of Prison Inmates</a></li>
                 <li><a href="prayer.html">Prayer to St.Dismas</a></li>
-
-
-
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
           </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
   </div>
-
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-4 col-md-3">
@@ -89,15 +87,17 @@
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">MERIT Dorm</h1>
-        <div class="text-center">
-          <span class="cursive larger">M</span>orality<br>
-          <span class="cursive larger">E</span>xcellence<br>
-          <span class="cursive larger">R</span>espect<br>
-          <span class="cursive larger">I</span>ntegrity<br>
-          <span class="cursive larger">T</span>rust
+        <div class="row">
+          <div class="col-xs-3 col-xs-offset-5">
+            <span class="cursive larger">M</span>orality<br>
+            <span class="cursive larger">E</span>xcellence<br>
+            <span class="cursive larger">R</span>espect<br>
+            <span class="cursive larger">I</span>ntegrity<br>
+            <span class="cursive larger">T</span>rust
+          </div>
         </div>
         <p class="bring-down">
-          The Saint Dismas Foundation was the prime mover in the establishment of a special, safer, housing unit for those inmates who "merit" it. Inmates who have enrolled in and completed self-betterment programs, and have had no "DR's" (disciplinary reports) in 24 months etc. are eligible to apply. As the sponsor St. Dismas agreed to fund the project.
+          The Saint Dismas Foundation was the prime mover in the establishment of a special, safer, housing unit for those inmates who "merit" it. Inmates who have enrolled in and completed self-betterment programs, and have had no "DR's" (disciplinary reports) in a predetermined amount of time, are eligible to apply. As the sponsor St. Dismas agreed to fund the project.
         </p>
         <img src="images/inmate_praying.jpg" class="main-column-img center-block responsive" alt="Prisoner kneeling and praying in a prison chapel.">
       </div>
