--- a/santa.html
+++ b/santa.html
@@ -18,16 +18,14 @@
     <nav class="navbar navbar-default navbar-custom">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header text-center">
+          <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home.html">
-            <img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo">
-          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,18 +55,19 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Saint Dismas<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="dismas.html">Dismas the Patron Saint of Prison Inmates</a></li>
                 <li><a href="prayer.html">Prayer to St.Dismas</a></li>
-
-
-
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
           </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
   </div>
 
@@ -102,6 +101,8 @@
           On Christmas morning, when children come to the prison to visit their fathers, he or she receives a Christmas gift from Deacon Don and Pam Battiston, and from Deacon George and Judy Kinard, with the words, "Your Dad wanted you to have this for Christmas."
         </p>
         <img src="images/delivery.jpg" class="main-column-img center-block responsive" alt="Back of a van, doors flung open, and the inside is overflowing with presents. Two men stand on the side, smiling as they get ready to deliver presents to children.">
+        <img src="images/toys.jpg" class="main-column-img center-block responsive" alt="Massive jumble of toys in all different types of containers and bags delivered to a needy home.">
+
       </div>
     </div>
   </div>
