--- a/farm-program.html
+++ b/farm-program.html
@@ -18,16 +18,14 @@
     <nav class="navbar navbar-default navbar-custom">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header text-center">
+          <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home.html">
-            <img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo">
-          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,21 +55,22 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Saint Dismas<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="dismas.html">Dismas the Patron Saint of Prison Inmates</a></li>
                 <li><a href="prayer.html">Prayer to St.Dismas</a></li>
-
-
-
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
           </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
   </div>
-
+  
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 main-text">
