--- a/home.html
+++ b/home.html
@@ -54,6 +54,12 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="donations.html">Donations</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Saint Dismas<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="dismas.html">Dismas the Patron Saint of Prison Inmates</a></li>
                   <li><a href="prayer.html">Prayer to St.Dismas</a></li>
                 </ul>
               </li>
@@ -153,8 +159,8 @@
     <footer class="">
       <div class="container">
         <div class="row">
-          <div class="col-xs-4">
-            <p class="footer-left">
+          <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+            <p>
               Saint Dismas Prison Ministry Foundation
               <br> 1701 Indian Creek Parkway
               <br> Jupiter, Florida 33458
@@ -162,11 +168,11 @@
               <br>
             </p>
           </div>
-          <div class="col-xs-4 text-center">
+          <div class="col-xs-12 col-sm-4 col-md-4 text-center">
             <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
           </div>
-          <div class="col-xs-4">
-            <p class="text-right footer-right">
+          <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+            <p>
               Copyright &copy; 2015
               <br>
               <br>
