--- a/literacy-program.html
+++ b/literacy-program.html
@@ -18,16 +18,14 @@
     <nav class="navbar navbar-default navbar-custom">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header text-center">
+          <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home.html">
-            <img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo">
-          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,18 +55,19 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Saint Dismas<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="dismas.html">Dismas the Patron Saint of Prison Inmates</a></li>
                 <li><a href="prayer.html">Prayer to St.Dismas</a></li>
-
-
-
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
           </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
   </div>
 
@@ -89,9 +88,13 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">The Literacy Program</h1>
         <p class="bring-down">
-          Two thirds of the inmate population is functionally illiterate. The Laubach method by New Reader Press is a time-tested method that has taught millions of adults to read and is ideal for adult learners who have little or no reading skills and require a uniform, step-by-step approach to reading.
+          Two thirds of the inmate population is functionally illiterate. Doing time is difficult enough and without the ability to read the bible or other books or even letters from family members it is almost impossible!!
+        </p>
+        <p>
+          We use the Laubach method by New Reader Press. It is a time-tested method that has taught millions of adults to read and is ideal for adult learners who have little or no reading skills and require a uniform, step-by-step approach to reading.
         </p>
         <img src="images/literacy.jpg" class="main-column-img center-block responsive" alt="Inmates in a classroom setting, all with books and pencils, looking attentively at the instructor in the front of the room.">
+        <br>
       </div>
     </div>
   </div>
