Fixed the navbar-wrapper height throughout all  screen sizes so that the navbar fix jump wasn't jarring.

--- a/home.html
+++ b/home.html
@@ -68,6 +68,9 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
+      <div class="buffer">
+        
+      </div>
     </div>
 
     <div class="container-fluid">
