Adjusted individual page elements (Home, Apiary, Art Program) so that they layout nicely on mobile.

--- a/art-program.html
+++ b/art-program.html
@@ -72,7 +72,24 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 main-text">
+
+      <div class="col-xs-12 col-sm-4 col-md-3">
+        <aside class="text-center">
+          <p>
+            “I was in prison and you came to visit me...
+            <br>I tell you the truth, whatever you did
+            <br>for one of the least of these brothers
+            <br>of mine, you did for me.”
+            <br>&mdash;Matthew 25:36, 40
+            <br>
+          </p>
+          <img src="images/art-drawing-small.jpg" class="side-image" alt="Jesus washing the foot of a black man while the disciples look on." />
+          <img class="side-image hidden-xs" src="images/top-hat.jpg" alt="Black man in a tuxedo and top-hat." />
+          <img class="side-image hidden-xs" src="images/jesus-flock.jpg" alt="Painting of Jesus in a pastoral setting holding a crook and guiding a flock of sheep." />
+          <img class="side-image hidden-xs" src="images/meeting-demand.jpg" alt="Digital art cover of a pamphlet created by the inmates to teach others how to maximize the efficiency of crops. Depicts two farmers with anime-spiked hair, both wearing blue overalls, one holding a shovel, the other a hoe. A dog and several ducks loiter in the foreground. Behind them, a big red barn and a phallic silver silo loom over the scene." />
+        </aside>
+      </div>
+      <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Art Program</h1>
         <p class="bring-down">
           God has gifted some inmates with art talent. It has been said, "When we make art, we become the art we are making . . . it’s kind of a circle!!!”
@@ -84,31 +101,19 @@
         <figcaption class="cursive text-center">"Ball Field" Clay</figcaption>
         <img src="images/sculpture2.JPG" class="main-column-img center-block img-responsive" alt="Another sculpture of Jesus's head, created by an inmate in the art program.">
         <figcaption class="cursive text-center">"Prison Soap"</figcaption>
-
       </div>
-      <div class="col-xs-12 col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-9">
-        <aside class="text-center">
-          <p>
-            “I was in prison and you came to visit me...
-            <br>I tell you the truth, whatever you did
-            <br>for one of the least of these brothers
-            <br>of mine, you did for me.”
-            <br>&mdash;Matthew 25:36, 40
-            <br>
-          </p>
-          <img src="images/art-drawing-small.jpg" class="side-image" alt="Jesus washing the foot of a black man while the disciples look on." />
-          <img class="side-image" src="images/top-hat.jpg" alt="Black man in a tuxedo and top-hat." />
-          <img class="side-image" src="images/jesus-flock.jpg" alt="Painting of Jesus in a pastoral setting holding a crook and guiding a flock of sheep." />
-          <img class="side-image" src="images/meeting-demand.jpg" alt="Digital art cover of a pamphlet created by the inmates to teach others how to maximize the efficiency of crops. Depicts two farmers with anime-spiked hair, both wearing blue overalls, one holding a shovel, the other a hoe. A dog and several ducks loiter in the foreground. Behind them, a big red barn and a phallic silver silo loom over the scene." />
-        </aside>
+      <div class="col-xs-12 visible-xs text-center">
+        <img class="side-image" src="images/top-hat.jpg" alt="Black man in a tuxedo and top-hat." /><br>
+        <img class="side-image" src="images/jesus-flock.jpg" alt="Painting of Jesus in a pastoral setting holding a crook and guiding a flock of sheep." /><br>
+        <img class="side-image" src="images/meeting-demand.jpg" alt="Digital art cover of a pamphlet created by the inmates to teach others how to maximize the efficiency of crops. Depicts two farmers with anime-spiked hair, both wearing blue overalls, one holding a shovel, the other a hoe. A dog and several ducks loiter in the foreground. Behind them, a big red barn and a phallic silver silo loom over the scene." />
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -116,11 +121,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -130,6 +144,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
