--- a/home.html
+++ b/home.html
@@ -68,9 +68,6 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-      <div class="buffer">
-        
-      </div>
     </div>
 
     <div class="container-fluid">
@@ -105,7 +102,7 @@
               <br>should not perish but have eternal life.
               <br>&mdash;John 3:16
             </p>
-            <img src="images/jesus_bars_art_small.jpg" class="img-responsive" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
+            <img src="images/jesus_bars_art_small.jpg" class="img-responsive side-image" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
           </aside>
           <aside class="text-center hidden-xs">
             <p>
@@ -116,7 +113,7 @@
               <br>&mdash;Matthew 25:36, 40
               <br>
             </p>
-            <img src="images/jesus_bars.JPG" class="img-responsive" alt="Sketch of Jesus. Black and white." />
+            <img src="images/jesus_bars.JPG" class="img-responsive side-image" alt="Sketch of Jesus. Black and white." />
           </aside>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
@@ -154,15 +151,25 @@
               <br>&mdash;Matthew 25:36, 40
               <br>
             </p>
-            <img src="images/jesus_bars.JPG" class="img-responsive" alt="Sketch of Jesus. Black and white." />
+            <img src="images/jesus_bars.JPG" class="img-responsive side-image" alt="Sketch of Jesus. Black and white." />
           </aside>
         </div>
       </div>
     </div>
-    <footer class="">
+
+    <footer>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <div class="hidden-xs col-sm-4 col-md-4">
+            <p>
+              Saint Dismas Prison Ministry Foundation
+              <br> 1701 Indian Creek Parkway
+              <br> Jupiter, Florida 33458
+              <br> 561-662-0832
+              <br>
+            </p>
+          </div>
+          <div class="col-xs-12 visible-xs text-center">
             <p>
               Saint Dismas Prison Ministry Foundation
               <br> 1701 Indian Creek Parkway
